--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1084,6 +1084,13 @@ section {
   margin: 60px 0 0 60px;
 }
 
+.about .section-header{
+  text-align: justify;
+}
+.about h2{
+  text-align: center;
+}
+
 .about .about-img:before {
   position: absolute;
   inset: -60px 0 0 -60px;
@@ -1275,6 +1282,7 @@ section {
 --------------------------------------------------------------*/
 #portfolio{
   padding: 0%;
+  border: none;
 }
 .portfolio .portfolio-flters {
   padding: 0;
@@ -1294,19 +1302,44 @@ section {
   margin-bottom: 5px;
   transition: all 0.3s ease-in-out;
 }
+.portfolio .cards {
+  background: none;
+  border: none;
+
+}
 
 
-@media (max-width: 575px) {
+@media (max-width: 768px) {
   .portfolio .cards {
-    padding-left: 15%;
+    padding-left: 15% !important;  
+    border: none;
   
+  }
+  .portfolio .cards .containers .info{
+    height: 400px !important;
+    width: 95% !important;
+    border-radius: 30px;
+    padding: 5%;
+    box-shadow: inset 0 0 0 0px rgba(0, 0, 0, 0.404),
+    0.3em 0.3em 1em rgba(0, 0, 0, 0.3);
+  
+  }
+
+  .portfolio .cards .containers .img-card img{
+
+    height: 400px !important;
+    width: 100%;
+    object-fit: cover;
+    border-radius: 30px;
+    box-shadow: inset 0 0 0 1px rgba(0, 0, 0, 0.404),
+    0.3em 0.3em 1em rgba(0, 0, 0, 0.3);
+    cursor: pointer;
   
   }
 }
 
 .portfolio .cards .containers .info{
 
-  background: white;
   border-radius: 30px;
   padding: 5%;
   box-shadow: inset 0 0 0 0px rgba(0, 0, 0, 0.404),
@@ -1315,10 +1348,10 @@ section {
 }
 
 .portfolio .cards .descripcion iframe{
-  background: white;
   height: 500px;
   width: 100%;
   border-radius: 30px;
+  border: none;
   box-shadow: inset 0 0 0 0px rgba(0, 0, 0, 0.404),
   0.3em 0.3em 1em rgba(0, 0, 0, 0.3);
 
@@ -1332,6 +1365,7 @@ section {
   border-radius: 30px;
   box-shadow: inset 0 0 0 1px rgba(0, 0, 0, 0.404),
   0.3em 0.3em 1em rgba(0, 0, 0, 0.3);
+  cursor: pointer;
 
 }
 
@@ -1392,6 +1426,7 @@ section {
   padding-right: 50px;
 }
 .portfolio-container{
+  background: none;
   height: fit-content;
 }
 
@@ -1421,8 +1456,8 @@ section {
   opacity: 1;
 }
 
-.portfolio .portfolio-item:hover img {
-  transform: scale(1.);
+.portfolio .portfolio-item img:hover  {
+  transform: scale(1.1);
 }
 
 .portfolio .portfolio-item:hover .portfolio-info {
@@ -1433,6 +1468,10 @@ section {
 /*--------------------------------------------------------------
 # Contact Section
 --------------------------------------------------------------*/
+#contact{
+  position: relative;
+  height: 700px;
+}
 .contact .map {
   margin-bottom: 40px;
 }
@@ -2392,4 +2431,322 @@ section {
 .footer .footer-legal .social-links a:hover {
   background: var(--color-primary);
   text-decoration: none;
+}
+
+.onfocus {
+  padding: 0;
+}
+
+.onfocus .video-play {
+  min-height: 400px;
+  background: linear-gradient(rgba(var(--color-black-rgb), 0.4), rgba(var(--color-black-rgb), 0.7)), url("../img/onfocus-video-bg.jpg") center center;
+  background-size: cover;
+}
+
+.onfocus .content {
+  background: linear-gradient(rgba(var(--color-secondary-rgb), 0.5), rgba(var(--color-secondary-rgb), 0.8)), url("../img/onfocus-content-bg.jpg") center center;
+  background-size: cover;
+  color: rgba(var(--color-white-rgb), 0.8);
+  padding: 40px;
+}
+
+@media (min-width: 768px) {
+  .onfocus .content {
+    padding: 80px;
+  }
+}
+
+.onfocus .content h3 {
+  font-weight: 600;
+  font-size: 32px;
+  color: var(--color-white);
+}
+
+.onfocus .content ul {
+  list-style: none;
+  padding: 0;
+}
+
+.onfocus .content ul li {
+  padding-bottom: 10px;
+}
+
+.onfocus .content ul i {
+  font-size: 20px;
+  padding-right: 4px;
+  color: var(--color-primary);
+}
+
+.onfocus .content p:last-child {
+  margin-bottom: 0;
+}
+
+.onfocus .content .read-more {
+  font-family: var(--font-primary);
+  font-weight: 500;
+  font-size: 16px;
+  letter-spacing: 1px;
+  padding: 12px 24px;
+  border-radius: 5px;
+  transition: 0.3s;
+  display: -nline-flex;
+  align-items: center;
+  justify-content: center;
+  color: var(--color-white);
+  background: var(--color-primary);
+}
+
+.onfocus .content .read-more i {
+  font-size: 18px;
+  margin-left: 5px;
+  line-height: 0;
+  transition: 0.3s;
+}
+
+.onfocus .content .read-more:hover {
+  background: rgba(var(--color-primary-rgb), 0.9);
+  padding-right: 19px;
+}
+
+.onfocus .content .read-more:hover i {
+  margin-left: 10px;
+}
+
+.onfocus .play-btn {
+  width: 94px;
+  height: 94px;
+  background: radial-gradient(var(--color-primary) 50%, rgba(var(--color-primary-rgb), 0.4) 52%);
+  border-radius: 50%;
+  display: block;
+  position: absolute;
+  left: calc(50% - 47px);
+  top: calc(50% - 47px);
+  overflow: hidden;
+}
+
+.onfocus .play-btn:before {
+  content: "";
+  position: absolute;
+  width: 120px;
+  height: 120px;
+  animation-delay: 0s;
+  animation: pulsate-btn 2s;
+  animation-direction: forwards;
+  animation-iteration-count: infinite;
+  animation-timing-function: steps;
+  opacity: 1;
+  border-radius: 50%;
+  border: 5px solid rgba(var(--color-primary-rgb), 0.7);
+  top: -15%;
+  left: -15%;
+  background: rgba(198, 16, 0, 0);
+}
+
+.onfocus .play-btn:after {
+  content: "";
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translateX(-40%) translateY(-50%);
+  width: 0;
+  height: 0;
+  border-top: 10px solid transparent;
+  border-bottom: 10px solid transparent;
+  border-left: 15px solid var(--color-white);
+  z-index: 100;
+  transition: all 400ms cubic-bezier(0.55, 0.055, 0.675, 0.19);
+}
+
+.onfocus .play-btn:hover:before {
+  content: "";
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translateX(-40%) translateY(-50%);
+  width: 0;
+  height: 0;
+  border: none;
+  border-top: 10px solid transparent;
+  border-bottom: 10px solid transparent;
+  border-left: 15px solid var(--color-white);
+  z-index: 200;
+  animation: none;
+  border-radius: 0;
+}
+
+.onfocus .play-btn:hover:after {
+  border-left: 15px solid var(--color-primary);
+  transform: scale(20);
+}
+
+@keyframes pulsate-btn {
+  0% {
+    transform: scale(0.6, 0.6);
+    opacity: 1;
+  }
+
+  100% {
+    transform: scale(1, 1);
+    opacity: 0;
+  }
+}
+
+
+.abs-center {
+  margin: auto;
+  position: relative;
+  top: 0; left: 0; bottom: 0; right: 0;
+}
+
+
+/* header */
+
+.Contactheader{
+  background: rgba(255,255,255,0.9); /* omit on base styles */
+  position: absolute;
+  top: -100%;
+  right: 0%;
+  width: 100%;
+  height: 100%;
+  z-index: 999;  
+
+}
+
+.btn {
+  font-size: 0.825em;
+  font-weight: bold;
+  letter-spacing: 2px;
+  color: #555;
+  border: 3px solid #555;
+  width: 140px;
+  height: 40px;
+  line-height: 34px;
+  text-decoration: none;
+  cursor: pointer;
+  text-align: center;
+}
+.btn:after {
+	  content: '';
+	  position: absolute;
+	  z-index: -1;
+	  -webkit-transition: all 0.3s;
+	  -moz-transition: all 0.3s;
+	  transition: all 0.3s;
+}
+
+.btn-hello {
+  position: absolute;
+  bottom: 10px;
+  right: 20px;
+  
+  -webkit-transition: all 0.45s ease;
+          transition: all 0.45s ease;
+}
+.btn-hello:after {
+	  width: 0%;
+	  height: 100%;
+	  top: 0;
+	  left: 0;
+  	background: #555;
+}
+.btn-hello:hover {
+  background: var(--color-primary);
+  color: white;
+
+}
+.btn-hello:hover:after {
+  width: 100%;
+}
+
+/* header change state */
+
+.to-bottom {
+
+  -webkit-transform: translate3d(0, 80%, 0);
+          transform: translate3d(0, 0, 0);
+  
+}
+.to-bottom .btn-hello {
+  color: #eee;
+  border: 3px solid #eee;
+}
+.to-bottom .btn-hello:after {
+  background: #eee;
+}
+.to-bottom .btn-hello:hover {
+  color: #555;
+}
+
+/* contact */
+
+.contact {
+  color: white;
+  text-align: center;
+  padding: 10%;
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+  width: 100%;
+  height: 90%;
+  overflow: hidden;
+  overflow-y: scroll;
+
+}
+.contact::-webkit-scrollbar{
+  width: 15px;
+  transform: scale(0.5);
+  border-radius: 50px;
+  border: transparent;
+  background-color: transparent;
+
+
+}
+.contact h3 {
+}
+.tiles-container {
+  padding: 10%;
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+  width: 100%;
+  height: 100%;
+}
+.contact-tiles {
+  width: 396px;
+  margin: 2px;
+  
+  text-align: center;
+  font-size: 0.75em;
+  font-weight: 400;
+  letter-spacing: 5px;
+  line-height: 176px; /* quick n dirty, fix later */
+}
+.contact-tiles.facebook {
+  background: #3b5998;
+}
+.contact-tiles.instagram {
+  background: #517fa4;
+}
+.contact-tiles.email {
+  background: #bfb6b6;
+}
+.contact-tiles.telephone {
+  background: #fff;
+  color: #000;
+}
+
+/* main */
+
+.main {
+  position: relative;
+  top: 45%;
+  text-align: center;
+}
+.main h1 {
+  display: inline;
+  background: rgba(24,255,255,0.7);
+  color: white;
+  padding: 10px;
+  margin: 0;
+  line-height: 1.8em;
 }
